<resources>
    <string name="gcm_project_num">347398514227</string>
    <string name="app_name">Threemoji</string>
    <string name="threemoji_url">http://threemoji.github.io</string>
    <string name="content_authority">com.threemoji.threemoji</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_chats">Chats</string>
    <string name="nav_item_people_nearby">People nearby</string>
    <string name="nav_item_archived_chats">Archived chats</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>

    <string name="pref_has_seen_start_page_key">hasSeenStartPage</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_token_key">gcmToken</string>

    <string name="pref_filter_gender_label">Filter by gender</string>
    <string name="pref_filter_gender_key">filterGender</string>
    <string name="pref_filter_gender_default">All</string>
    <string-array name="pref_filter_gender_values">
        <item>All</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string name="pref_max_distance_label">Distance radius (km)</string>
    <string name="pref_max_distance_key">maxRadius</string>
    <string name="pref_max_distance_default">50</string>
    <string name="pref_max_distance_max">100</string>
    <string name="pref_max_distance_min">1</string>

    <string name="pref_chat_archive_duration_label">Chat archive duration</string>
    <string name="pref_chat_archive_duration_key">archiveDuration</string>
    <string name="pref_chat_archive_duration_default">30</string>
    <string-array name="pref_chat_archive_duration_choices">
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>
    <string-array name="pref_chat_archive_duration_values">
        <item>14</item>
        <item>30</item>
        <item>90</item>
    </string-array>

    <string name="pref_chat_notifications_label">Chat notifications</string>
    <string name="pref_chat_notifications_key">notificationsEnabled</string>
    <string name="pref_chat_notifications_default">true</string>
    <string name="pref_chat_notifications_summary">Includes notifications for new matches and new messages</string>

    <string name="prefs_lookup_nearby_time">lastLookupNearbyTime</string>
    <string name="prefs_match_status">matchFound</string>

    <string name="title_activity_start_page">Start Page</string>

    <string name="profile_uid_key">profileUid</string>
    <string name="profile_password_key">profilePassword</string>
    <string name="profile_emoji_one_key">profileEmoji1</string>
    <string name="profile_emoji_two_key">profileEmoji2</string>
    <string name="profile_emoji_three_key">profileEmoji3</string>
    <string name="profile_gender_key">profileGender</string>
    <string name="profile_generated_name_key">profileGeneratedName</string>
    <string name="profile_location_longitude">profileLongitude</string>
    <string name="profile_location_latitude">profileLatitude</string>

    <string name="backend_action_key">action</string>
    <string name="backend_action_upload_profile_key">upload_profile</string>
    <string name="backend_action_update_profile_key">update_profile</string>
    <string name="backend_action_update_token_key">update_token</string>
    <string name="backend_action_send_message_key">send_message</string>
    <string name="backend_action_send_match_notification_key">send_match_notification</string>
    <string name="backend_action_lookup_profile_key">lookup_profile</string>
    <string name="backend_action_lookup_nearby_key">lookup_nearby</string>
    <string name="backend_action_delete_profile_key">delete_profile</string>
    <string name="backend_action_update_location_key">update_location</string>

    <string name="backend_response_lookup_profile_key">lookup_profile</string>
    <string name="backend_response_lookup_nearby_key">lookup_nearby</string>
    <string name="backend_response_match_notification_key">match_notification</string>
    <string name="backend_response_reupload_request_key">reupload_request</string>

    <string name="backend_uid_key">uid</string>
    <string name="backend_password_key">password</string>
    <string name="backend_token_key">token</string>
    <string name="backend_emoji_one_key">emoji_1</string>
    <string name="backend_emoji_two_key">emoji_2</string>
    <string name="backend_emoji_three_key">emoji_3</string>
    <string name="backend_generated_name_key">generated_name</string>
    <string name="backend_gender_key">gender</string>
    <string name="backend_gender_pref_key">gender_pref</string>
    <string name="backend_location_latitude_key">latitude</string>
    <string name="backend_location_longitude_key">longitude</string>
    <string name="backend_radius_key">radius</string>

    <string name="backend_to_key">to</string>
    <string name="backend_message_key">message</string>

    <string name="backend_profile_key">profile</string>

    <string name="title_activity_clear_data">ClearDataActivity</string>

    <string name="chat_option_mute">Mute</string>
    <string name="chat_option_unmute">Unmute</string>
    <string name="chat_option_archive">Archive</string>
    <string name="chat_option_unarchive">Unarchive</string>
    <string name="chat_option_delete">Delete</string>
    <string name="chat_option_block">Block</string>

    <string name="chat_intent_extra_action">action</string>
    <string name="chat_intent_extra_uid">uid</string>
    <string name="chat_intent_extra_message">message</string>
    <string name="location_service_lookup_nearby">restart</string>

    <string name="no_one_nearby">Could not find anyone nearby.</string>
    <string name="uids_of_opened_chats">uidsOfOpenedChats</string>

    <string name="title_activity_archived_chats">Archived Chats</string>
</resources>
