<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue=""
        android:key="@string/pref_token_key"
        android:selectAllOnFocus="true"
        android:title="@string/pref_token_label" />

    <ListPreference
        android:defaultValue="@string/pref_filter_gender_default"
        android:entries="@array/pref_filter_gender_values"
        android:entryValues="@array/pref_filter_gender_values"
        android:key="@string/pref_filter_gender_key"
        android:title="@string/pref_filter_gender_label" />

    <com.threemoji.threemoji.DistancePreference
        android:key="@string/pref_max_distance_key"
        android:title="@string/pref_max_distance_label" />

    <ListPreference
        android:defaultValue="@string/pref_chat_archive_duration_default"
        android:entries="@array/pref_chat_archive_duration_choices"
        android:entryValues="@array/pref_chat_archive_duration_values"
        android:key="@string/pref_chat_archive_duration_key"
        android:title="@string/pref_chat_archive_duration_label" />

    <SwitchPreference
        android:defaultValue="@string/pref_chat_notifications_default"
        android:key="@string/pref_chat_notifications_key"
        android:summary="@string/pref_chat_notifications_summary"
        android:title="@string/pref_chat_notifications_label" />


</PreferenceScreen>
